--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -27,6 +27,6 @@ jobs:
     - name: Push changes
       env:
         CI_USER: ${{ secrets.YOUR_GITHUB_USER }}
-        CI_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        CI_TOKEN: ${{ secrets.YOUR_GITHUB_TOKEN }}
       run: |
         git push "https://$CI_USER:$CI_TOKEN@github.com/$GITHUB_REPOSITORY.git" HEAD:master
