--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -7,26 +7,12 @@ jobs:
   generate-changelog:
     runs-on: ubuntu-latest
     steps:
-    - name: checkout code
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    - name: run changelog
-      uses: faberNovel/github-changelog-generator-action@v1.0.0-alpha02
+    - uses: BobAnkh/auto-generate-changelog@master
       with:
-        options: --token ${{ secrets.GITHUB_TOKEN }}
-    - name: Commit files
-      env: 
-        CI_USER: ${{ secrets.YOUR_GITHUB_USER }}
-        CI_EMAIL: ${{ secrets.YOUR_GITHUB_EMAIL }}
-      run: |
-        git config --local user.email "$CI_EMAIL"
-        git config --local user.name "$CI_USER"
-        git add CHANGELOG.md && git commit -m 'Updated CHANGELOG.md' && echo "push=true" >> $GITHUB_ENV || echo "No changes to CHANGELOG.md"
-
-    - name: Push changes
-      env:
-        CI_USER: ${{ secrets.YOUR_GITHUB_USER }}
-        CI_TOKEN: ${{ secrets.YOUR_GITHUB_TOKEN }}
-      run: |
-        git push "https://$CI_USER:$CI_TOKEN@github.com/$GITHUB_REPOSITORY.git" HEAD:master
+        REPO_NAME: ''
+        ACCESS_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        PATH: 'CHANGELOG.md'
+        COMMIT_MESSAGE: 'docs(CHANGELOG): update release notes'
