--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -1,7 +1,7 @@
 name: Generate changelog
 on:
   pull_request:
-    types: [opened, edited, reopened]]
+    types: [opened, edited, reopened]
 
 jobs:
   generate-changelog:
