--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,9 +18,13 @@ jobs:
         uses: actions/checkout@v2
 
       - name: generate-changelog
-        uses: faberNovel/github-changelog-generator-action@v1.0.0-alpha02
+        # https://github.com/marketplace/actions/generate-changelog for more options
+        uses: heinrichreimer/github-changelog-generator-action@v2.3
         with:
-          options: --token ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          output: 'CHANGELOG.md'
+          bugsLabel: 'fix'
+          
 
       - name: setup git config
         run: |
