--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,9 +28,12 @@ jobs:
 
       - name: setup git config
         run: |
-          # setup the username and email. I tend to use 'GitHub Actions Bot' with no email by default
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
+          
+      - name: add changelog, does nothing if already there
+        run: |
+          git add CHANGELOG.md
 
       - name: commit
         run: |
